--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ ul{
     justify-content: space-evenly;
     color: white;
     background-color: rgb(17, 14, 14);
+    text-decoration: none;
     
 }
 :any-link{
@@ -20,16 +21,40 @@ ul{
 }
 iframe{
     width: 100%;
-    height: 100%;
+    height: 60%;
     overflow: auto;
-    position: absolute;    
+    position: absolute;
+    padding-bottom: 1000px;    
 }
-input
-{
-    margin: 0 auto;
-    display: block;
+.search-bar{
+  margin: 0 auto;
+  display: flex;
+  font-family: sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
+  position: relative;
+  width: 46%;
+  height: 100%;
+  
 }
-button{
+.live{
+    background-color: rgb(249, 249, 249);
+    position: relative;
+    text-align: center;
+    left: -10px;
+    white-space: nowrap;
+    font-size: 14px;
     margin: 0 auto;
-    display: block;
+    max-width: 750px;
+    color: black;
+}
+.end{
+    text-align: center;
+    font-size: 24px;
+    padding-top: 900px;     
+}
+footer{
+    background-color: black;
+    color: gray;
+    padding-bottom: 0;
 }
